--- a/src/Blog/MainBundle/Resources/config/services.yml
+++ b/src/Blog/MainBundle/Resources/config/services.yml
@@ -8,3 +8,14 @@ services:
         arguments:       [Blog\MainBundle\Entity\Blog\Post]
         factory_service: doctrine.orm.entity_manager
         factory_method:  getRepository
+
+
+    blog_main.service.category:
+        class:     Blog\MainBundle\Service\CategoryService
+        arguments: ["@doctrine.orm.entity_manager", "@blog_main.repository.category", "@security.context"]
+
+    blog_main.repository.category:
+        class:           Blog\MainBundle\Entity\CategoryRepository
+        arguments:       [Blog\MainBundle\Entity\Blog\Category]
+        factory_service: doctrine.orm.entity_manager
+        factory_method:  getRepository
