--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,9 +14,9 @@ parameters:
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    blog_theme: default # default / cosmo / flatly
-    blog_title: My new blog
-    blog_hero: This a hero
-    blog_subhero: This is a subhero
+    blog_theme: spacelab
+    blog_title: BlogIt
+    blog_hero: Welcome to your new blog
+    blog_subhero: It's time to sit down and write down some good stories ...
     blog_copyright: Your copyright name
     blog_email: your.email@address.com
