--- a/src/Blog/MainBundle/Resources/config/services.yml
+++ b/src/Blog/MainBundle/Resources/config/services.yml
@@ -5,7 +5,7 @@ services:
 
     blog_main.repository.post:
         class:           Blog\MainBundle\Entity\PostRepository
-        arguments:       [Blog\MainBundle\Entity\Blog\Post]
+        arguments:       [Blog\MainBundle\Entity\Post]
         factory_service: doctrine.orm.entity_manager
         factory_method:  getRepository
 
@@ -16,6 +16,6 @@ services:
 
     blog_main.repository.category:
         class:           Blog\MainBundle\Entity\CategoryRepository
-        arguments:       [Blog\MainBundle\Entity\Blog\Category]
+        arguments:       [Blog\MainBundle\Entity\Category]
         factory_service: doctrine.orm.entity_manager
         factory_method:  getRepository
