--- a/src/Blog/MainBundle/Resources/config/services.yml
+++ b/src/Blog/MainBundle/Resources/config/services.yml
@@ -19,3 +19,7 @@ services:
         arguments:       [Blog\MainBundle\Entity\Category]
         factory_service: doctrine.orm.entity_manager
         factory_method:  getRepository
+
+    blog_main.util.user_manipulator:
+        class:           Blog\UserBundle\Util\UserManipulator
+        arguments:       [@fos_user.user_manager]
