--- a/provisioning/roles/symfony2/templates/parameters.yml
+++ b/provisioning/roles/symfony2/templates/parameters.yml
@@ -11,3 +11,11 @@ parameters:
     mailer_password: null
     locale: en
     secret: {{ secret }}
+    blog_theme: spacelab
+    blog_title: BlogIt
+    blog_hero: Welcome to your new blog
+    blog_subhero: It's time to sit down and write down some good stories ...
+    blog_copyright: Your copyright name
+    blog_email: your.email@address.com
+    facebook_like_button: true
+    facebook_commenting: true
