Added link admin

--- a/src/Blog/AdminBundle/Resources/config/routing.yml
+++ b/src/Blog/AdminBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ category:
 post:
     resource: "@BlogAdminBundle/Controller/PostController.php"
     type:     annotation
+
+link:
+    resource: "@BlogAdminBundle/Controller/LinkController.php"
+    type:     annotation
