--- a/src/Blog/AdminBundle/Resources/config/routing.yml
+++ b/src/Blog/AdminBundle/Resources/config/routing.yml
@@ -9,3 +9,7 @@ post:
 link:
     resource: "@BlogAdminBundle/Controller/LinkController.php"
     type:     annotation
+
+update:
+    resource: "@BlogAdminBundle/Controller/UpdateController.php"
+    type:     annotation
