--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,3 +23,5 @@ parameters:
 
     facebook_like_button: true
     facebook_commenting: true
+
+    addsearch_key:     55283a3af3b15460e5777af21df9c803
