--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,4 +24,4 @@ parameters:
     facebook_like_button: true
     facebook_commenting: true
 
-    addsearch_key:     55283a3af3b15460e5777af21df9c803
+    addsearch_key:     ~
