--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "~2.4",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "~1.2",
+        "doctrine/orm": "2.5.*@dev",
+        "doctrine/doctrine-bundle": "1.3.*@dev",
         "doctrine/migrations": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "twig/extensions": "~1.0",
@@ -21,7 +21,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
-	    "friendsofsymfony/user-bundle": "~2.0@dev",
+        "friendsofsymfony/user-bundle": "2.0.*@dev",
+        "doctrine/dbal": "2.5.*@dev",
         "knplabs/knp-paginator-bundle": "dev-master"
     },
     "scripts": {
