Added conditions for starting and ending dates

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,6 +38,7 @@ twig:
         facebook_like_button: "%facebook_like_button%"
         facebook_commenting: "%facebook_commenting%"
         addsearch_key: "%addsearch_key%"
+        uploader_url: "%uploader_url%"
 
 # Assetic Configuration
 assetic:
